Fixed uneven length pages in staff list

--- a/src/components/RenderRouter/HorizontalScrollList.scss
+++ b/src/components/RenderRouter/HorizontalScrollList.scss
@@ -24,6 +24,10 @@
         margin: 10px 0;
         padding: 0 5px;
         vertical-align: top;
+
+        &.whole-page {
+          width: 80vw;
+        }
       }
     }
 
